[package]
name = "asd"
version = "0.2.0"
edition = "2021"
description = "A terminal-based side-by-side diff viewer with syntax highlighting"
license = "MIT"
repository = "https://github.com/vdeantoni/asd"
readme = "README.md"
keywords = ["diff", "terminal", "tui", "syntax-highlighting", "side-by-side"]
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/vdeantoni/asd"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
similar = "2"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
